--- a/public/css/revup-special-offers.css
+++ b/public/css/revup-special-offers.css
@@ -1,13 +1,19 @@
+/* Add a container for the list that establishes a containment context */
+.revup-special-offers-wrapper {
+	container-type: inline-size;
+	display: flex;
+	flex-flow: column wrap;
+	justify-content: center;
+}
+
 .revup-special-offers-list {
 	display: flex;
 	flex-flow: column wrap;
 	justify-content: center;
 	margin: 0 auto;
 	gap: 20px;
-	padding: 0;
+	padding: 0 20px;
 	list-style: none;
-	width: 100%;
-	max-width: 1200px;
 	box-sizing: border-box; /* Prevents padding from increasing the width of the container */
 }
 
@@ -18,7 +24,7 @@
 	flex: 0 0 100%;
 	max-width: 100%;
 	padding: 30px;
-	border: 2px solid #f1f1f1;
+	border: 2px solid #000;
 	border-radius: 30px;
 	box-sizing: border-box; /* Prevents padding from increasing the width of the item */
 }
@@ -32,6 +38,11 @@
 	margin: 0;
 	margin-bottom: 20px;
 	max-width: 80%;
+}
+
+.revup-special-offer-expiration-date {
+	font-size: 0.76em;
+	color: #888;
 }
 
 .revup-special-offer-info-container {
@@ -72,13 +83,8 @@ a.revup-button:hover {
 	background-color: #333;
 }
 
-.revup-special-offer-expiration-date {
-	font-size: 0.72em;
-	text-align: center;
-	display: block;
-}
-
-@media screen and (min-width: 992px) {
+/* Using container query to allow nesting within columns, widgets, etc. 💅 */
+@container (min-width: 1100px) {
 	.revup-special-offers-list {
 		flex-flow: row wrap;
 		gap: 40px;
